objects/Contact.object
<CustomObject><fields>
        <fullName>ASC_Email__c</fullName>
        <label>ASC Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>AcademicSuccessCoach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Success Coach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Customer Community User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Academic_Standing__c</fullName>
        <description>Current Codes:
OO  Good Standing
AD  Academic Disqualification
AP  Academic Probation
CP  Continued Probation
DL  Dean's List
RP  Removed Probation</description>
        <label>Academic Standing</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Academic_Success_Coach__c</fullName>
        <label>Academic Success Coach</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Active_Hold__c</fullName>
        <formula>No_of_Holds__c  &gt;= 1</formula>
        <label>Active Hold</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Actual_Earned_Hours__c</fullName>
        <description>Total credit hours as student has earned</description>
        <label>Actual Earned Hours</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Add_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a student adds or drops a class this is checked</description>
        <label>Add/Drop</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Age__c</fullName>
        <description>Age based on DOB</description>
        <formula>IF ( NOT( ISBLANK( Birthdate )),
IF( DATE(2000 , MONTH(Birthdate) , DAY(Birthdate) ) &lt;= DATE (2000, MONTH(TODAY() ) , DAY(TODAY() ) ), YEAR (TODAY ()) - YEAR ( Birthdate), YEAR (Today()) - YEAR ( Birthdate) -1),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Athlete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Athlete Flag to denote participation on a Athletic Team</description>
        <label>Athlete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CASA_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CASA Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <description>The primary USF ID</description>
        <externalId>true</externalId>
        <label>CWID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Standing__c</fullName>
        <description>Freshman, Sophomore, Junior, etc.</description>
        <label>Class Standing</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Certification_Level__c</fullName>
        <label>Current Certification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Tutor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Certified Tutor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Certified Tutor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Deposited_for_Next_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposited for Next Term</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>Updated by LWC Staff</description>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>Updated by LWC Staff</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <description>Updated by LWC Staff</description>
        <label>Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Emergency_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receiving Emergency Funding flag</description>
        <label>Emergency Funding</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Expected_Certification_Level__c</fullName>
        <formula>IF( AND (Total_Training_Hours__c  &gt;= 30, Total_Tutoring_Hours__c  &gt;= 75), "Master Certified Tutor", IF(AND (Total_Training_Hours__c  &gt;= 20, Total_Tutoring_Hours__c  &gt;= 50), "Advanced Certified Tutor", IF(AND (Total_Training_Hours__c  &gt;= 10, Total_Tutoring_Hours__c  &gt;= 25), "Certified Tutor", IF(AND (Total_Training_Hours__c  &gt; 0, Total_Tutoring_Hours__c  &gt; 0), "Trainee",  ""))))</formula>
        <label>Expected Certification Level</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Expected_Graduation_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Graduation Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Contacts (Expected Graduation Term)</relationshipLabel>
        <relationshipName>ContactsGrad</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Faculty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify a member of faculty for integration purposes.</description>
        <label>Faculty</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>First_Generation_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Generation Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>First_Term_Attended__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>First Term Attended</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Contacts (First Term Attended)</relationshipLabel>
        <relationshipName>ContactsFirstTerm</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Full_Name_Email__c</fullName>
        <formula>FirstName &amp; " " &amp; LastName &amp; IF(ISBLANK( Email ),"", " - " &amp; Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name - Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; " " &amp;  LastName &amp; IF(ISBLANK(CWID__c),"", " (" &amp; CWID__c &amp; ")")</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Gao_Kao_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gao Kao Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Graduation_Status__c</fullName>
        <label>Graduation Status</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Greek_Organization__c</fullName>
        <label>Greek Organization</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Haven_Resident_Academic_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haven Resident Academic Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Haven_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haven Resident</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Internal_1_on_1_Notes__c</fullName>
        <description>Notes for LWC Staff Members.</description>
        <inlineHelpText>Notes for LWC Staff Members</inlineHelpText>
        <label>Internal 1-on-1 Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Jesuit_Exchange_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jesuit Exchange Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LWC_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supports Consultant Pay Functionality</description>
        <label>LWC Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Term_Attended__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Last Term Attended</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Contacts (Last Term Attended)</relationshipLabel>
        <relationshipName>ContactsLastTerm</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Major__c</fullName>
        <inlineHelpText>Confirm Field, Primary Academic Program, Related List</inlineHelpText>
        <label>Major</label>
        <length>175</length>
        
        <type>Text</type>
    </fields><fields>
        <fullName>Minor__c</fullName>
        <inlineHelpText>Confirm field, Primary Academic Program, Related List</inlineHelpText>
        <label>Minor</label>
        <length>175</length>
        
        <type>Text</type>
    </fields><fields>
        <fullName>Muscat_Scholars_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muscat Scholars Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>New_Student_Survey_Results__c</fullName>
        <label>New Student Survey Results</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>No_of_Cumulative_GPAs__c</fullName>
        <label>No. of Cumulative GPAs</label>
        <summaryForeignKey>Cumulative_GPA__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>No_of_Holds__c</fullName>
        <description>Supports Active Hold Flag</description>
        <label>No. of Holds</label>
        <summaryFilterItems>
            <field>Hold__c.Active_Hold__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Hold__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>No_of_Strikes_in_Writing_Center__c</fullName>
        <label>No of Strikes in Writing Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>No_of_strikes_in_Peer_Center__c</fullName>
        <label>No of Strikes in Peer Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Number_of_Units_in_Current_Term__c</fullName>
        <label>Number of Units in Current Term</label>
        <precision>3</precision>
        <scale>0</scale>
        
        <type>Number</type>
    </fields><fields>
        <fullName>On_Off_Campus_Job_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On/Off-Campus Job Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Contacts (On/Off-Campus Job Term)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>On_Off_Campus_Job_or_Internship__c</fullName>
        <label>On/Off-Campus Job or Internship</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>PACT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PACT</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PIDM_System_Contact_ID__c</fullName>
        <description>External System Contact ID (PIDM)</description>
        <externalId>true</externalId>
        <label>PIDM System Contact ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>PTD_of_Degree_Earned__c</fullName>
        <description>Maintained by CASA</description>
        <label>PTD - % of Degree Earned</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PTD_of_Degree_Required__c</fullName>
        <description>Maintained by CASA</description>
        <label>PTD - % of Degree Required</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Pending_Certification__c</fullName>
        <formula>TEXT (Current_Certification_Level__c)  &lt;&gt;  Expected_Certification_Level__c</formula>
        <label>Pending Certification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Photo_URL__c</fullName>
        <label>Photo URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE('https://artemis.usfca.edu:8030/'&amp; CWID__c &amp;'.JPG','Image Not Found', 100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Gender__c</fullName>
        <description>Student reported value</description>
        <label>Preferred Gender</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Prior_Term_Cumulative_GPA__c</fullName>
        <label>Prior Term Cumulative GPA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Prior_Term_GPA__c</fullName>
        <label>Prior Term GPA</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Reason_Withdrawn__c</fullName>
        <label>Reason Withdrawn</label>
        <length>255</length>
        
        <type>Text</type>
    </fields><fields>
        <fullName>Receives_Financial_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives Financial Aid</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Recovery_Substance_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recovery/Substance Abuse</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Registered_for_Next_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered for Next Term</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Residence_Hall__c</fullName>
        <label>Residence Hall</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SDS_Specialist__c</fullName>
        <description>Student Disability Services Specialist</description>
        <label>SDS Specialist</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Self_Reported_Email__c</fullName>
        <inlineHelpText>Students are encouraged to update Banner</inlineHelpText>
        <label>Self Reported Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Self_Reported_Phone__c</fullName>
        <inlineHelpText>Updated when a student provides a preferred phone while booking an appointment online</inlineHelpText>
        <label>Self-Reported Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Self_Reported_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Reported Veteran</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Special_Advisor__c</fullName>
        <label>Special Advisor</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>MLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Sport__c</fullName>
        <label>Sport</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify a member of USF Staff for integration purposes.</description>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Club_Participation__c</fullName>
        <label>Student Club Participation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Student_Disability_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Disability Services</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Type__c</fullName>
        <label>Student Type</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Interaction functionality</description>
        <label>Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Success_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success Story</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Supplemental_Instruction_Hours__c</fullName>
        <label>Supplemental Instruction Hours</label>
        <summarizedField>SI_Session__c.Duration_Hours__c</summarizedField>
        <summaryForeignKey>SI_Session__c.Staff__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Term_Withdrawn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term Withdrawn</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Withdrawals</relationshipLabel>
        <relationshipName>ContactsWithdrawn</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Total_PS_Meetings_Min__c</fullName>
        <label>Total PS Meetings(Min)</label>
        <summarizedField>Project_Success__c.No_of_PS_Meeting_Minutes__c</summarizedField>
        <summaryForeignKey>Project_Success__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Training_Hours__c</fullName>
        <label>Total Training Hours</label>
        <summarizedField>Workshop_Attendee__c.Training_Hours__c</summarizedField>
        <summaryForeignKey>Workshop_Attendee__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Tutoring_Hours__c</fullName>
        <label>Total Tutoring Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>University_Scholar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>University Scholar</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Zoom_Link__c</fullName>
        <inlineHelpText>Personal Meeting ID.  "Use Personal Meeting ID for instant meetings" should be checked in Zoom.</inlineHelpText>
        <label>Zoom Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>hed__WorkPhone__c</fullName>
        <description>See 'Preferred Phone' field.</description>
        <inlineHelpText>See 'Preferred Phone' field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>hed__Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Name.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Informal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Formal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option excludes the contact from emails and phone calls.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Contact's mailing fields are filled with.</description>
        <inlineHelpText>The current Address that the Contact's mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Address__c.hed__Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact's household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas (the)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia (Plurinational State of)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Religion__c</fullName>
        <label>Religion</label>
        <picklist>
            <picklistValues>
                <fullName>Atheist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buddhist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Primary_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Business Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Organization)</relationshipLabel>
        <relationshipName>Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>    </validationRules></CustomObject>